--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
         h2{
             text-align:center;
           }
-        p{
-        text-align:center;
-        }
         </style>
         </head >
 <body>
     <div style="color:#00000">
-    <h1>关于游戏迷宫（迷宫类游戏）的一些想法
+    <h1>关于迷宫（迷宫类游戏）的想法
     <h2>时间；11月12日
 <h2>迷宫游戏发展史总结（你真觉得这能讲完吗？）</h1>
 <p>最早的迷宫游戏应该是地牢类游戏，如《巫术》。即，Dungeon地牢。也即大名鼎鼎的DRPG。
